--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^4.0.0",
+    "vosk-browser": "^0.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
